# melodyi-skills

./: .gitignore  CLAUDE.md  sync-skills.sh
skills/melodyi-search/: .env.example  CLAUDE.md  pyproject.toml  skill.md  需求.md
skills/melodyi-search/.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
skills/melodyi-search/.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
skills/melodyi-search/.planning/milestones/: v1.0-REQUIREMENTS.md
skills/melodyi-search/docs/: fetch-providers-research.md
skills/melodyi-search/melodyi_search/: __init__.py  __main__.py
skills/melodyi-search/melodyi_search/application/: __init__.py  cli.py
skills/melodyi-search/melodyi_search/providers/: __init__.py  base_provider.py  brave_provider.py  exa_provider.py  firecrawl_provider.py  minimax_cn_provider.py  searxng_provider.py  tavily_provider.py
skills/melodyi-search/melodyi_web/: __main__.py
skills/melodyi-search/melodyi_web/application/: __init__.py  cli.py
skills/melodyi-search/melodyi_web/domain/: __init__.py
skills/melodyi-search/melodyi_web/providers/: __init__.py
skills/melodyi-search/tests/: __init__.py
skills/melodyi-search/tests/application/: test_cli.py
skills/melodyi-search/tests/domain/: __init__.py
skills/melodyi-search/tests/integration/: test_brave_e2e.py  test_cli_comparison_e2e.py  test_comparison_e2e.py  test_exa_e2e.py  test_minimax_cn_e2e.py  test_tavily_e2e.py
skills/melodyi-search/tests/providers/: test_base_provider.py  (+6 more)
(+191 files in other folders)
