[project]
name = "melodyi-search"
version = "0.1.0"
description = "多提供商搜索工具，支持多种搜索 API"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "httpx>=0.25",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
melodyi-search = "melodyi_search.application.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["melodyi_search"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]