[project]
name = "melodyi-web"
version = "0.1.0"
description = "多提供商搜索与网页抓取工具"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "httpx>=0.25",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
melodyi-web = "melodyi_web.application.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["melodyi_web"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]